--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -3,6 +3,37 @@
     xmlns:tools="http://schemas.android.com/tools">
 
     <application
+        android:name=".QuizApp"
+        android:allowBackup="true"
+        android:dataExtractionRules="@xml/data_extraction_rules"
+        android:fullBackupContent="@xml/backup_rules"
+        android:icon="@mipmap/ic_launcher"
+        android:label="@string/app_name"
+        android:theme="@style/Theme.QuizDroidBasics"
+        android:roundIcon="@mipmap/ic_launcher_round"
+        android:supportsRtl="true"
+        tools:targetApi="31">
+        <activity
+            android:name=".Answers"
+            android:exported="false" />
+        <activity
+            android:name=".QuizQuestions"
+            android:exported="false" />
+        <activity
+            android:name=".TopicsList"
+            android:exported="false" />
+        <activity
+            android:name=".MainActivity"
+            android:exported="true">
+            <intent-filter>
+                <action android:name="android.intent.action.MAIN" />
+
+                <category android:name="android.intent.category.LAUNCHER" />
+            </intent-filter>
+        </activity>
+    </application>
+    <!--
+    <application
         android:allowBackup="true"
         android:dataExtractionRules="@xml/data_extraction_rules"
         android:fullBackupContent="@xml/backup_rules"
@@ -27,6 +58,16 @@
             android:label="Quiz Questions" />
         <activity android:name=".Answers"
             android:label="Ending Page" />
-    </application>
+        <activity android:name=".Quiz"
+            android:label="Quiz" />
+        <activity android:name=".QuizApp"
+            android:label="QuizApp" />
+        <activity android:name=".Topic"
+            android:label="Topic" />
+        <activity android:name=".TopicRepository"
+            android:label="TopicRepo" />
+        <activity android:name=".MemoryTopicsRepo"
+            android:label="memTopicRepo" />
+    </application>-->
 
 </manifest>
